// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user table invite date column test Test date is many days ago 1`] = `
<div
  className="cell cell"
>
  <time
    className="value ntiText"
    dateTime="2017-10-31T00:00:00Z"
  >
    Oct 31, 2017
  </time>
</div>
`;

exports[`Site admin user table invite date column test Test date is now 1`] = `
<div
  className="cell cell"
>
  <span>
    Today
  </span>
</div>
`;

exports[`Site admin user table invite date column test Test date is yesterday 1`] = `
<div
  className="cell cell"
>
  <span>
    Yesterday
  </span>
</div>
`;
